# Metacbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduler.yml
data/: forecasts.csv  forecasts.jsonl  latest_summary.md  runs.csv  state.json
src/: main.py
src/config/: constants.py  logging.yaml  settings.py  timezone.py
src/execution/: dedupe.py  risk.py  runner.py  submitter.py
src/forecasting/: baselines.py  ensemble.py  features.py  validators.py
src/forecasting/stats/: binary_models.py  calibration.py  date_models.py  distributions.py  forecasting_tools_adapter.py  multiclass_models.py  numeric_models.py  scoring.py  time_series.py
src/llm/: openrouter_client.py  roles.py  structured.py
src/llm/prompts/: default.md  forecaster.md  parser.md  researcher.md  summarizer.md
src/metacbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/metaculus/: client.py  schemas.py  selection.py  state.py  windows.py
src/research/: evidence.py  exa_client.py  retrieval.py  source_ranker.py
src/storage/: csv_logger.py  git_commit.py  jsonl_logger.py  report.py
tests/: test_api_payload_format.py  test_binary_models.py  test_client_fallback.py  test_date_models.py  test_ensemble.py  test_exa_openrouter_fallback.py  test_numeric_models.py  test_openrouter_structured.py  test_runtime_fallbacks.py  test_selection.py  test_settings.py  test_validators.py  test_windows.py
tests/fixtures/: exa_results.json  metaculus_questions.json  metaculus_tournament_32916.json
